[gd_scene load_steps=10 format=3 uid="uid://di0533rcopumy"]

[ext_resource type="Script" path="res://player/boom.gd" id="1_oye5e"]
[ext_resource type="Texture2D" uid="uid://d3bm6jq0ga0ih" path="res://arts/boom_wave_.png" id="2_0jk1s"]
[ext_resource type="Texture2D" uid="uid://d4dwuu528nl6w" path="res://arts/boom_planB_.png" id="3_p74nl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yosw2"]
texture = ExtResource("2_0jk1s")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7r643"]
texture = ExtResource("3_p74nl")
texture_region_size = Vector2i(32, 32)
0:0/animation_speed = 5.0
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 3)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ujvyr"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_yosw2")
sources/1 = SubResource("TileSetAtlasSource_7r643")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5jkh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j242p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qc36b"]

[node name="boom" type="Node2D"]
script = ExtResource("1_oye5e")
length = 5

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-16, -16)
tile_set = SubResource("TileSet_ujvyr")
format = 2
layer_0/z_index = 3
layer_0/tile_data = PackedInt32Array(0, 1, 0)

[node name="Label" type="Label" parent="."]
offset_left = -12.0
offset_top = -39.0
offset_right = 12.0
offset_bottom = -16.0
horizontal_alignment = 1

[node name="wave_area" type="Area2D" parent="."]
scale = Vector2(1.6, 1.6)

[node name="cx" type="CollisionShape2D" parent="wave_area"]
shape = SubResource("RectangleShape2D_f5jkh")

[node name="ColorRect" type="ColorRect" parent="wave_area/cx"]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(1, 0.482353, 0, 0.392157)

[node name="cy" type="CollisionShape2D" parent="wave_area"]
shape = SubResource("RectangleShape2D_j242p")

[node name="ColorRect" type="ColorRect" parent="wave_area/cy"]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(1, 0.482353, 0, 0.392157)

[node name="boom_area" type="Area2D" parent="."]

[node name="boom_c" type="CollisionShape2D" parent="boom_area"]
shape = SubResource("RectangleShape2D_qc36b")

[connection signal="area_entered" from="wave_area" to="." method="_on_wave_area_area_entered"]
[connection signal="area_exited" from="wave_area" to="." method="_on_wave_area_area_exited"]
